# oled_simplegui_linux

./: CMakeLists.txt  README.md  build.sh  build_oled_app.sh  display.c  display.c.bak  display.h  font.h  main.c  oled.c  oled.h
3rd/simplegui/GUI/inc/: SGUI_Config.h  SGUI_FontResource.h
3rd/simplegui/GUI/src/: SGUI_FontResource.c
simplegui/inc/: DemoProc.h  DemoResource_GB2312.h  Resource.h  sgui_ev.h  sgui_port.h
simplegui/src/: DemoProc.c  PolarCoordinates.c  Resource.c  VariableBox.c  ip_show_page.c  m2pc_card_rec_page.c  m2pc_dev_state_page.c  m2pc_hardware_ver_page.c  m2pc_list.c  m2pc_page_show_page.c  m2pc_para_page.c  m2pc_softversion_page.c  m2pc_type_page.c  myfont.c  sgui_port.c
